srv/styles.css
:root {
  --branding-color: #f7f7fa;
  --heading-font-family: "Quicksand", sans-serif;
  --default-font-family: "Poppins", sans-serif;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: var(--heading-font-family);
}
h1 {
  font-size: 96px;
}

.hero {
  background: var(--branding-color);
  text-align: center;
  padding: 100px 20px;
}

.hero p {
  font-family: var(--default-font-family);
  font-size: 36px;
  font-weight: bold;
  margin: 0px;
}
.hero h2 {
  font-family: var(--heading-font-family);
  font-weight: normal;
  font-size: 24px;
}
.hero img {
  border-radius: 50px;
  width: 400px;
}
.button {
  margin-top: 60px;
}
footer .social-links {
  display: flex;
  text-decoration: none;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  padding: 0px;
  gap: 30px;
  margin: 60px 0;
}
footer .social-links a {
  margin: 0 20px;
  color: black;
  background: var(--branding-color);
  padding: 10px;
  font-size: 18px;
  border-radius: 50%;
  transition: all 150ms ease-in-out;
}
footer .social-links a:hover {
  color: grey;
  background: var(--branding-color);
}

.btn {
  border-radius: 4px;
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}
.content {
  border-radius: 30px;
  text-align: center;
  padding: 100px 20px;
}
.content-container {
  margin: 30px;
  background: var(--branding-color);
}
.content h1 {
  font-size: 64px;
  line-height: 60px;
  margin-top: 40px;
}
.content h2 {
  font-size: 18px;
  font-family: var(--default-font-family);
}
.content h3 {
  font-size: 24px;
  line-height: 1.5;
  margin: 20px 0 0;
  font-family: var(--default-font-family);
}
.content h7 {
  font-size: 14px;
}
.content p {
  font-size: 20px;
  text-align: justify;
  line-height: 50px;
  margin-top: 60px;
  margin-bottom: 100px;
  margin-left: 40px;
}
.content-container img {
  margin-top: 80px;
  border-radius: 50px;
  width: 600px;
}
.project-title {
  font-family: var(--heading-font-family);
  font-size: 64px;
  padding: 20px 20px 0px 0px;
  text-align: center;
  margin-bottom: 0px;
}
.logo {
  max-width: 100px;
}

@media (max-width: 600px) {
  p {
    font-size: 20px;
  }

  h1 {
    font-size: 40px;
    line-height: 1;
  }
  .contact {
    font-size: 30px;
  }
  h2 {
    font-size: 30px;
  }
  h3 {
    font-size: 30px;
  }
  h7 {
    padding: 0;
    text-align: center;
  }
  .content {
    text-align: center;
    padding: 0;
    font-size: 20px;
  }

  hero {
    padding: 80px 20px;
  }
  img {
    text-align: center;
    padding: 0;
  }
}

@media (min-width: 567px) {
  .container {
    max-width: 540px;
  }
}

@-ms-viewport {
  width: device-width;
}

